--- a/scRNAseq_exploration.Rmd
+++ b/scRNAseq_exploration.Rmd
@@ -1,10 +1,6 @@
 ---
 title: "Reading in the Data and Calling Cells"
-author: "RA Greenstein"
-date: "1/14/2020"
-output: 
-      html_document:
-        keep_md: true
+output: github_document
 ---
 
 
