--- a/1_readData_countCells.Rmd
+++ b/1_readData_countCells.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(echo = FALSE)
 
 Load the major packages needed for this analysis first. Additional packages will be loaded as needed.
 
-```{r, echo=TRUE}
+```{r, message=FALSE, warning=FALSE, echo = TRUE}
 
 # dependencies needed
 library(SingleCellExperiment)
@@ -27,7 +27,7 @@ library(Rtsne)
 
 ## Obtain in the data from ArrayExpress
 
-```{r, echo=TRUE}
+```{r, message=FALSE, warning=FALSE, echo=TRUE}
 
 ## -- download and unzip data  -- ##
 
