--- a/4_dimensionalityReduction.Rmd
+++ b/4_dimensionalityReduction.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 Load the major packages needed for this analysis first. Additional packages will be loaded as needed.
 
-```{r, echo=TRUE}
+```{r, message=FALSE, warning=FALSE, echo = TRUE}
 # dependencies needed
 library(SingleCellExperiment)
 library(scater)
