--- a/Rmd_Files/2_QC_Filtering.Rmd
+++ b/Rmd_Files/2_QC_Filtering.Rmd
@@ -114,3 +114,7 @@ dim(filtered) # less cells!
 saveRDS(filtered, file="./processed_data/guiu_filtered.rds") # save the sce post QC
 ```
 
+
+```{r}
+sessionInfo()
+```
