--- a/Rmd_Files/3_Normalization.Rmd
+++ b/Rmd_Files/3_Normalization.Rmd
@@ -81,3 +81,8 @@ length(top.genes.varFDR) #1240 genes
 plotExpression(filtered, features=rownames(top.genes.var)[1:10])
 ```
 
+
+```{r}
+sessionInfo()
+```
+
